# ai-explorer-backend

./: .cursorignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  bigquery_table_metadata.json  docker-compose.yml  hgraph_graphql_metadata.json  hiero_mirror_sdk_methods_documentation.json  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build-and-push-gcp-prod.yml  build-and-push-gcp.yml
alembic/: env.py
alembic/versions/: 13f9da3db90d_add_unique_constraint_feedback_message_id.py  42bd22621a75_cascade_feedback_message_delete.py  6dcbfcd576d3_feedback_table_for_messages.py  726f379b96ef_add_edited_at_field_for_messages.py  77ffb8af086d_initial_migration_add_conversations_and_.py  928e3480ac21_initial_migration_add_conversations_and_.py  ad6886ff187a_add_suggested_queries_table.py  fc53479d7923_enable_pgvector_extension.py
app/: config.py  exception_handlers.py  exceptions.py  main.py  settings.py
app/api/endpoints/: chat.py  message.py  suggestions.py
app/db/: __init__.py  base.py  models.py  session.py
app/middleware/: __init__.py  logging_middleware.py
app/prompts/: system_prompts.py
app/schemas/: chat.py  suggestions.py
app/services/: chat_service.py  llm_orchestrator.py  suggestion_service.py
app/services/helpers/: chat_constants.py  chat_db_operations.py  chat_validators.py  constants.py  cost_calculator.py  message_converter.py  response_streamer.py  suggestion_constants.py  suggestion_db_operations.py  suggestion_validators.py  tool_call_parser.py  workflow_builder.py
app/utils/: cost_limiter.py  logging_config.py  rate_limiter.py
docs/: BRD.md  GraphQL.md  SDD.md
evals/: dataset.py  evaluation_test.py  evaluator.py  examples.csv  main.py
mcp-servers/: Dockerfile  README.md  conftest.py  pyproject.toml
mcp_external/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
mcp_external/app/: __init__.py  logging_config.py  main.py
mcp_external/app/client/: __init__.py  api_client.py
mcp_external/app/config/: settings.py
mcp_servers/: Dockerfile  README.md  __main__.py  conftest.py  hgraph_graphql_metadata.json  main.py  pyproject.toml  pyrightconfig.json
mcp_servers/app/: __init__.py  exceptions.py  health_monitor.py  logging_config.py  main.py  settings.py
mcp_servers/app/services/: __init__.py  bigquery_schema_vector_store.py  bigquery_service.py  database_manager.py  document_processor.py  graphql_service.py  saucerswap_service.py  sdk_service.py  text_processor.py  vector_search_service.py  vector_store_service.py
mcp_servers/tests/: test_health.py  test_mcp_tools.py  test_sdk_service.py
scripts/: check_limits.py  spam_websocket.py  start.sh  ws_send_query.py
scripts/deploy/: README.md  cleanup.sh  deploy.sh  list.sh  secrets.sh  setup-backend.sh  setup-infrastructure.sh
scripts/dev/: check_limits.py  check_redis_counters.py  query_websocket.py  query_websocket_dev.py  spam.py  spam_websocket.py
sdk/: README.md  build.gradle.kts  pyproject.toml
sdk/examples/: advanced_usage.py  basic_usage.py
sdk/hiero_mirror/: __init__.py  async_client.py  client.py  exceptions.py  models.py  utils.py
sdk/tests/: test_client.py
terraform/: .terraform.lock.hcl  artifact_registry.tf  backend.tf  cloud_dns.tf  cloud_run.tf  cloud_sql.tf  cloud_storage.tf  firebase.tf.disabled  firewall.tf  load_balancer.tf  main.tf  network.tf  outputs.tf  redis.tf  secret_manager.tf  service_accounts.tf  terraform.tfvars.example  variables.tf
tests/: test_exception_handlers.py  test_llm_orchestrator.py
