[project]
name = "ai-explorer-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "langsmith>=0.4.1",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv.workspace]
members = ["mcp-servers"]
