[project]
name = "mcp-external"
version = "0.1.0"
description = "MCP server exposing AI Explorer to other AI agents"
authors = [{ name = "AI Explorer Team" }]
requires-python = ">=3.11"

dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "PIE", "T20"]
ignore = ["E501"]                                                             # Line too long (handled by black)

[tool.hatch.build.targets.wheel]
packages = ["app"]
