[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-mcp-adapters>=0.1.9",
    "hiero-mirror-node-sdk",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0.0",
    "pgvector>=0.3.0",
    "openai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-postgres>=0.0.15",
    "python-dotenv>=1.0.0",
]
