[project]
name = "mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # MCP Server core
    "mcp>=1.0.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    
    # Vector database for embeddings
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.0",
    
    # AI/ML for MCP tools
    "openai>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.27",
    "langchain-community>=0.2.0",
    "langchain-postgres>=0.0.15",
    "langchain-google-genai>=2.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

